# err-backend-discord-redux

./: CHANGELOG.md  README.md  pyproject.toml
src/err-backend-discord/: err-backend-discord.py
src/err-backend-discord/discordlib/: room.py
